--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,5 @@ jobs:
       run: npm install --global surge
       
     - name: Deploy on surge
-      run: surge ./build yasircalculator.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./ yasircalculator.surge.sh --token ${{secrets.SURGE_TOKEN}}
       
