--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "react-scripts": "^3.4.1"
   },
   "dependencies": {
+    "and": "0.0.3",
+    "audit": "0.0.6",
     "big.js": "^5.2.2",
     "github-fork-ribbon-css": "^0.2.1",
+    "hoek": "^6.1.3",
+    "npm": "^6.14.5",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "run": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
