--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "npm": "^6.14.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "run": "^1.4.0"
+    "run": "^1.4.0",
+    "websocket-extensions": "^0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
